--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Open+Sans:wght@400;700&family=Oswald&family=Roboto:wght@400;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/overlays.css" />
     <link rel="stylesheet" href="styles/configuration.css" />
     <link rel="stylesheet" href="styles/game.css" />
-    <script src="/scripts/config.js" defer></script>
-    <script src="/scripts/game.js" defer></script>
-    <script src="/scripts/app.js" defer></script>
+    <script src="scripts/config.js" defer></script>
+    <script src="scripts/game.js" defer></script>
+    <script src="scripts/app.js" defer></script>
   </head>
   <body>
     <div id="backdrop"></div>
     <header id="main-header">
-      <h1>Play Tic-Tac-Toe</h1>
-      <p>Build with HTML, CSS, and JavaScript!</p>
+      <h1>Play Tic, Tac, Toe</h1>
+      <p>Built with HTML, CSS, JavaScript and - of course - lots of love!</p>
     </header>
     <main>
       <aside class="modal" id="config-overlay">
@@ -31,7 +30,7 @@
 
         <form>
           <div class="form-control">
-            <label for="playername">Player Name</label>
+            <label for="playername">Player name</label>
             <input type="text" name="playername" id="playername" required />
           </div>
           <p id="config-errors"></p>
@@ -43,7 +42,6 @@
           </div>
         </form>
       </aside>
-
       <section id="game-configuration">
         <ol>
           <li>
@@ -53,7 +51,7 @@
               <p class="player-symbol">X</p>
               <button
                 class="btn btn-alt"
-                id="edit-player1-btn"
+                id="edit-player-1-btn"
                 data-playerid="1"
               >
                 Edit
@@ -67,7 +65,7 @@
               <p class="player-symbol">O</p>
               <button
                 class="btn btn-alt"
-                id="edit-player2-btn"
+                id="edit-player-2-btn"
                 data-playerid="2"
               >
                 Edit
@@ -80,8 +78,8 @@
 
       <section id="active-game">
         <article id="game-over">
-          <h2>You Won! <span id="winner-name">PLAYER NAME</span></h2>
-          <p>Click "Start new Game" above to start a new game!</p>
+          <h2>You won, <span id="winner-name">PLAYER NAME</span>!</h2>
+          <p>Click "Start New Game" above, to start a new game!</p>
         </article>
 
         <p>It's your turn <span id="active-player-name">PLAYER NAME</span>!</p>
